Cody Repos/hello-world-spring-boot-cf/rosa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-spring-boot-cf-service
  namespace: cse-cody-ferguson
spec:
  selector:
    app: hello-world-spring-boot-cf-app  # Matches the label in deploy.yaml
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
