Cody Repos/hello-world-spring-boot-cf/rosa/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: hello-world-spring-boot-cf-instance
  name: hello-world-spring-boot-cf-route
  namespace: cse-cody-ferguson
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hello-world-spring-boot-cf-service
    weight: 100
  wildcardPolicy: None
